# TESLA-SUMMER-2024

./: README.md
Game360/: README.md
Neurion/: CMakeLists.txt  README.md
Neurion/data/: mut_output.json  rna_output.fasta  sample.fasta
Neurion/include/: analysis.h  codon_opt.h  io.h  mutation.h  transcription.h  translation.h
Neurion/src/: analysis.cpp  codon_opt.cpp  io.cpp  main.cpp  mutation.cpp  transcription.cpp  translation.cpp
PathFinder/: .gitignore  ARCHITECTURE.md  BLUE_LINE_FIX.md  CHICAGO_LOOP_TRANSFORMATION.md  DEMO_GUIDE.md  OPENSTREETMAP_UPGRADE.md  PROJECT_STATUS.md  README.md  ROUTE_DEBUGGING_GUIDE.md  TESLA_NAVIGATION_COMPLETE.md  TNAV_COMPLETE_GUIDE.md  TNAV_FINAL_SYSTEM.md
PathFinder/backend/: app.py  app_legacy.py  requirements.txt
PathFinder/backend/models/: __init__.py  city_grid.py  vehicle.py
PathFinder/backend/routing/: __init__.py  astar.py  charger_planner.py  cost_engine.py
PathFinder/backend/services/: __init__.py  traffic_sim.py
PathFinder/frontend/: index.html
ScholarPath/: README.md  ScholarPath
SummarEaseTypingStudio/: README.md  app.py
SummarEaseTypingStudio/services/: articles.py  storage.py  summarizer.py
SummarEaseTypingStudio/tests/: test_metrics.py  test_summarizer.py
SummarEaseTypingStudio/ui/: summarize_tab.py  typing_tab.py
TI84Calc/: calculator.py  configure.py  graphing.py  main.py  ui.py
TeXform/: Dockerfile  docker-compose.yml  requirements.txt  run.py
TeXform/api/: main.py
TeXform/backend/: latex_generator.py  ocr_engine.py
TeXform/tests/: test_ocr_engine.py
(+15 files in other folders)
